# openfhe-mnist-test

./: .gitignore  CMakeLists.txt  Readme.md
apps/: cifar_inference.cpp  encrypt.cpp  eval_mnist.cpp  keygen.cpp  main.cpp  mnist_inference_cryptonet.cpp  mnist_inference_very_sensible_model.cpp  test.cpp  testCPP.cpp  test_MLOperators.cpp
img/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
include/: Deserialize.h  KeyGen.h  LinTools.h  LoadImage.h  LoadModel.h  MLOperators.h  MatrixFormatting.h  random_double.h
python/: convert_to_CSV.py  getMatrices.py  getModel.py  loadMnist.py
src/: CMakeLists.txt  Deserialize.cpp  KeyGen.cpp  LinTools.cpp  LoadImage.cpp  MLOperators.cpp  MatrixFormatting.cpp  random_double.cpp
